# metricq-aggregator

./: .gitmodules  CMakeLists.txt  README.md
src/: aggragator.cpp  aggragator.hpp  aggregation_metric.cpp  aggregation_metric.hpp  main.cpp
